# consenzero-bench

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  core-rust.yml
benchmarks/01-tiny-state-native-structs/: README.md  sorted_summary_attestation.md  sorted_summary_attester_slashing.md  sorted_summary_block_header.md  sorted_summary_bls_to_execution_change.md  sorted_summary_deposit.md  sorted_summary_proposer_slashing.md  sorted_summary_sync_aggregate.md  sorted_summary_voluntary_exit.md
benchmarks/02-tiny-state-guest-deserialization/: README.md  sorted_summary_attestation.md  sorted_summary_attester_slashing.md  sorted_summary_block_header.md  sorted_summary_bls_to_execution_change.md  sorted_summary_deposit.md  sorted_summary_proposer_slashing.md  sorted_summary_sync_aggregate.md  sorted_summary_voluntary_exit.md
benchmarks/03-sha2-precompile/: sorted_summary_attestation.md  sorted_summary_attester_slashing.md  sorted_summary_block_header.md  sorted_summary_bls_to_execution_change.md  sorted_summary_deposit.md  sorted_summary_proposer_slashing.md  sorted_summary_sync_aggregate.md  sorted_summary_voluntary_exit.md
benchmarks/04-poseidon2-hash/: sorted_summary_attestation.md  sorted_summary_attester_slashing.md  sorted_summary_block_header.md  sorted_summary_bls_to_execution_change.md  sorted_summary_proposer_slashing.md  sorted_summary_sync_aggregate.md  sorted_summary_voluntary_exit.md
consensus/beacon-state/: Cargo.toml
consensus/beacon-state/src/: beacon_state.rs  lib.rs
consensus/common/: Cargo.toml
consensus/common/src/: attestation.rs  attester_slashing.rs  beacon_block.rs  beacon_block_body.rs  beacon_block_header.rs  bls.rs  bls_to_execution_change.rs  checkpoint.rs  deposit.rs  eth_1_data.rs  execution_payload.rs  execution_payload_header.rs  fork.rs  funcs.rs  historical_summary.rs  kzg.rs  lib.rs  proof.rs  proposer_slashing.rs  sync_aggregate.rs  sync_committee.rs  validator.rs  voluntary_exit.rs
host/: Cargo.toml  Makefile
host/subscripts/: parse_log_to_table.sh
lib/: Cargo.toml
lib/src/: beacon_state.rs  file.rs  input.rs  lib.rs  partial_input.rs  ssz.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
scripts/: Cargo.toml  Makefile
scripts/subscripts/: parse_log_to_table.sh
