[workspace]
members = ["host", "lib", "methods"]
resolver = "2"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[workspace.package]
edition = "2024"

[workspace.dependencies]
ethereum_ssz = "0.9"
ream-consensus = { git = "https://github.com/ReamLabs/ream.git", branch = "zkvm", package = "ream-consensus", features = ["zkvm"] }
tracing = "0.1"
tree_hash = "0.10"
tree_hash_derive = "0.10"

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing" }
ssz_types = { git = "https://github.com/ReamLabs/ssz_types", branch = "magic-extended-list" } # Extends 2^29 to 2^40 list root
