[package]
version = "0.1.0"
name = "consenzero-script"
edition = "2021"

[[bin]]
name = "consenzero-script"
path = "src/bin/main.rs"

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4.3"
dotenv = "0.15.0"
methods = { path = "../methods" }
risc0-zkvm = { version = "2.0.1" }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Ethereum dependencies
ethereum_ssz = { workspace = true }

# Ream dependencies
ream-consensus = { workspace = true }
ream-lib = { path = "../lib" }

# Internal crate dependencies
consensus-beacon-state.workspace = true
consensus-common.workspace = true
