[package]
name = "ream-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum_ssz = { workspace = true }
snap = "1.1.1"
tracing = { workspace = true }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }

# Ream dependencies
ream-consensus = { workspace = true }
