[package]
version = "0.1.0"
name = "consenzero-script"
edition = "2021"

[[bin]]
name = "consenzero-script"
path = "src/bin/main.rs"

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = { workspace = true }
hex = "0.4.3"
dotenv = "0.15.0"

# Ethereum dependencies
ethereum_ssz = { workspace = true }

# Ream dependencies
ream-consensus = { workspace = true }
ream-lib = { path = "../lib" }

[build-dependencies]
sp1-build = "4.0.0"
