[package]
name = "consensus_stf"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# Risc0 dependencies
risc0-zkvm = { version = "2.0.1", default-features = false, features = ['std'] }

# Ream dependencies
ethereum_ssz = "0.8.2"
ream-consensus = { git = "https://github.com/ReamLabs/ream.git", package = "ream-consensus" }
ream-lib = { path = "../../lib" }
tree_hash = "0.9"
tree_hash_derive = "0.9"



[patch.crates-io]
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing" } # Add ethereum_hashing::Sha256Context that's failing tree_hash crate used by ream
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }

#[patch.'https://github.com/zkcrypto/bls12_381']
#bls12_381 = { git = "https://github.com/risc0/zkcrypto-bls12_381", tag = "bls12_381/v0.8.0-risczero.1" }
